# import2uv

./: README.md  pyproject.toml
src/import2uv/: __init__.py  cli.py  generator.py  resolver.py  scanner.py
src/import2uv/data/: mapping.json
tests/: test_cli.py  test_generator.py  test_resolver.py  test_scanner.py
