[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "import2uv"
version = "0.1.0"
description = "Scan Python imports and draft uv add dependencies."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "ArkWhale" },
]
dependencies = [
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
import2uv = "import2uv.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/import2uv"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
